--- a/source/empresa/style.css
+++ b/source/empresa/style.css
@@ -4,3 +4,11 @@
     background-color: #b2dfdb !important;
     color: #6200ea;
 }
+
+.itemtab {
+    color: #004d40 !important;
+}
+
+.itemtab:hover{
+    color: #00796b !important;
+}
