--- a/source/empresa/style/estilo.css
+++ b/source/empresa/style/estilo.css
@@ -2,6 +2,47 @@ body {
     background-image: url("https://files.slack.com/files-tmb/T6WGP2WAU-F77TSB5QD-9191f5efb3/fundo_720.jpg");  
 }
 
+.tab-esquerda {
+    width: 50%;
+    display: inline-block;
+}
+
+.canvas {
+    padding-left: 0px !important;
+}
+
+.myChart, .myChart2 {
+    /*border: 1px solid;*/
+    box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, .2);
+}
+
+.myChart:hover, .myChart2:hover {
+    /*border: 1px solid;*/
+    box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, .4);
+    cursor: pointer;
+}
+
+.modal-content > .myChart, .modal-context > .myChart2, .modal-content > .myChart:hover, .modal-context > .myChart2:hover {
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0) !important;
+}
+
+.tab-direita {
+    width: 200px;
+    float: right;
+    display: inline-block;
+    height: auto;
+}
+
+.imagemProdutoRelatorio {
+    width: 100%;
+    height: 200px;
+    background-color: gray;
+}
+
+a:hover {
+    cursor: pointer;
+}
+
 #divEsquerda {
 	margin-right: 25%;
 	display: inline-block;
@@ -109,11 +150,13 @@ body {
 }
 
 .container {
+    position: relative;
 	margin-top: 20px;
     background-color: white;
     border-radius: 10px;
     padding: 20px;
     margin-bottom: 220px;
+    overflow: hidden;
 }
 
 .item {
@@ -129,7 +172,7 @@ body {
 }
 
 .item:hover {
-	cursor: default;
+	cursor: pointer;
 	box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, .5);
 }
 
