Menu de navegação
Criação do menu de navegação e integração de todas as telas. A partir de agora todas as páginas são HTML. O funcionamento será detalhado no Slack.

--- a/source/cliente/style/estilo.css
+++ b/source/cliente/style/estilo.css
@@ -145,6 +145,10 @@
 		display: inline-block;
 		width: 150px;
 		margin-bottom: -20px;
+        
+		display: inline-block;
+		float: right;
+        position: relative;
 	}
   
 	.preloader-wrapper {
