--- a/source/empresa/style/estilo.css
+++ b/source/empresa/style/estilo.css
@@ -140,11 +140,10 @@ a:hover {
 	display: inline-block;
 	width: 60%;
 	height: 96%;
-	background-color: gray;
 	-moz-background-size:100% 100%;
 	-webkit-background-size:100% 100%;
 	background-size:100% 100%;
-	background-image: url('Libri.jpg');
+	background-image: url('Libri.png');
 	transition: .4s;
 	float: right;
 }
