Atualizações via IntelliJ IDEA

--- a/source/empresa/style/style.css
+++ b/source/empresa/style/style.css
@@ -5,11 +5,11 @@
     color: #6200ea;
 }
 
-.itemtab {
+.tab_item {
     color: #004d40 !important;
 }
 
-.itemtab:hover{
+.tab_item:hover{
     color: #00796b !important;
 }
 
