Algumas correções e tentativa falha de usar ajax.

--- a/source/empresa/style/style.css
+++ b/source/empresa/style/style.css
@@ -7,6 +7,16 @@
 
 .itemTabela {
     align-content: center;
+    text-align: center;
+}
+
+td {
+    align-content: center;
+    text-align: center;
+}
+
+th {
+    text-align: center;
 }
 
 .tabs .tab a{
