--- a/source/empresa/style/style.css
+++ b/source/empresa/style/style.css
@@ -1,49 +1,16 @@
 /* Style feito por Brian */ 
 
-.itemTabela:hover {
+.itemtabela:hover {
     background-color: #b2dfdb !important;
     color: #6200ea;
 }
 
-<<<<<<< HEAD
-.itemTabela {
-    align-content: center;
-    text-align: center;
-}
-
-td {
-    align-content: center;
-    text-align: center;
-}
-
-th {
-    text-align: center;
-}
-
-.tabs .tab a{
-    color:#000;
-}
-
-.tabs .tab a:hover {
-    background-color:#eee;
-    color:#000;
-}
-
-.tabs .tab a.active {
-    background-color:#b2dfdb;
-    color:#000;
-}
-
-.tabs .indicator {
-    background-color: #6200ea;
-=======
-.tab_item {
+.itemtab {
     color: #004d40 !important;
 }
 
-.tab_item:hover{
+.itemtab:hover{
     color: #00796b !important;
->>>>>>> master
 }
 
 body {
