--- a/estilo.css
+++ b/estilo.css
@@ -110,13 +110,13 @@ html,body{
     color: red !important;
     }
     
-    input{
+    #mae input{
         height: 30px !important;
         margin: 10px 5px !important;
         padding-left: 5px !important;
     }
     
-    h5 {
+    #mae h5 {
         font-size: 30px;
         margin-bottom: -10px;
     }
